sumo/tests/traci/ChangeTarget/InvalidNodeId/errors.traci
Error: Answered with error to command 49: Can not retrieve node with given ID
Error while receiving command: tcpip::Socket::receive() @ recv: No error
Error while sending command: send failed: Software caused tcpip::Socket abort
